syntax = "proto3";

package taas_proto;

option go_package = "./taas_proto";

import "transaction.proto";

message KvDBData {
  OpType op_type = 1;
  string key = 2;
  string value = 3;
  uint64 csn = 4;
}

message KvDBRequest {
  repeated KvDBData data = 1;
};

message KvDBResponse {
  bool result = 1;
  repeated KvDBData data = 2;
};

service KvDBGetService {
  rpc Get(KvDBRequest) returns (KvDBResponse);
};

service KvDBPutService {
  rpc Put(KvDBRequest) returns (KvDBResponse);
};

